# harc-rag

./: pyproject.toml
src/harc_rag/: __init__.py
src/harc_rag/chunking/: character_strategy.py  exceptions.py  models.py  splitter.py  strategies.py  word_strategy.py
src/harc_rag/document/: exceptions.py  loader.py  models.py
src/harc_rag/embedding/: interfaces.py  minilm.py  models.py  service.py
src/harc_rag/generation/: exceptions.py  generator.py  interfaces.py  models.py  ollama.py  prompt_builder.py  service.py
src/harc_rag/retrieval/: config.py  dense_retriever.py  exceptions.py  interfaces.py  models.py  service.py
src/harc_rag/vectorstore/: exceptions.py  faiss_store.py  interfaces.py  models.py
tests/: test_faiss.py  test_generation.py  test_loader.py  test_prompt_builder.py  test_retrieval.py  test_retrieval_service.py  test_splitter.py  test_vectorstore.py  test_word_strategy.py
