[project]
name = "harc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kiran kannan", email = "kirankannan0706@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "google-generativeai>=0.8.6",
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
harc-rag = "harc_rag:main"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
